--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </ul>
         <h2>The Web Design</h2>
         <p>Yes, I know how to write CSS, <a href="https://www.richardcoric.dev">I promise</a> but something about this feels right.</p>
-        <p>It's not bloated, it's responsive, the contrast is there, and the whole thing loads in about 7ms.</p>
+        <p>It's not bloated, it's responsive, the contrast is there, and the whole thing loads in about 7ms all just 8 lines of CSS.</p>
     </div>
 </body>
 </html>
