--- a/index.html
+++ b/index.html
@@ -62,7 +62,15 @@
             </li>
             <li>
                 <input type="checkbox">
+                <label>Graphics in C using OpenGL</label>
+            </li>
+            <li>
+                <input type="checkbox">
                 <label>Seam Carving and other image processing algorithms</label>
+            </li>
+            <li>
+                <input type="checkbox">
+                <label>Image Manipulation - Custom Photoshop</label>
             </li>
             <li>
                 <input type="checkbox">
